# spatos

./: .config  .gitignore  .gitmodules  .install-deps.sh.swp  Dockerfile  buildxfce  cmd.sh  get_recipes.sh  install-deps.sh  log  picom.conf  rebuild  run-config.sh  startnx  startxfce  todo.md
bleh/: Makefile  capture.sh  grantpt  grantpt.c  nested-xfce4-session.sh  pts  pts.c  ptsname  ptsname.c  run-in-terminal.sh  unlockpt  unlockpt.c  window-geometry.sh
config/: base.toml  desktop-minimal.toml  desktop.toml
config/x86_64/: desktop.toml  myfiles.toml
cookbook/: .gitignore  Cargo.toml  cook.sh  fetch.sh
mk/: config.mk  prefix.mk  repo.mk
relibc/dlmalloc-rs/: Cargo.toml
relibc/dlmalloc-rs/src/: global.rs  lib.rs  unix.rs
relibc/tests/: mkfifo.c
xfce-source/exo-4.18.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
xfce-source/garcon-4.18.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
xfce-source/libxfce4ui-4.18.0/: ChangeLog  Makefile.in  config.h.in  configure  configure.ac
xfce-source/libxfce4util-4.18.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
xfce-source/thunar-4.18.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
xfce-source/thunar-volman-4.18.0/: ChangeLog  Makefile.in  config.h.in  configure  configure.ac
xfce-source/tumbler-4.18.0/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure
xfce-source/xfce4-appfinder-4.18.0/: ChangeLog  Makefile.in  config.h.in  configure  configure.ac
xfce-source/xfce4-panel-4.18.0/: ChangeLog  (+4 more)
(+1162 files in other folders)
